<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zhro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account_hint">输入账号</string>
    <string name="account_label">账号</string>
    <string name="password_label">密码</string>
    <string name="password_save">记住密码</string>
    <string name="check_option01">隐身登录</string>
    <string name="check_option02">开启震动</string>
    <string name="check_option03">接收群消息</string>
    <string name="check_option04">静音登陆</string>
    <string name="login">登陆</string>
    
    <string name="face_desc">logo展示</string>
    <string name="list_desc">账号历史列表</string>
    <string name="othr_desc">底端选项列表</string>
    
    <string name="net_label">网络请求实例</string>
    <string name="net_hint">请输入网址</string>
    <string name="net_method">请求方法</string>
    <string name="net_method_g">GET</string>
    <string name="net_method_p">POST</string>
    <string name="net_button">点击获取</string>
    <string name="net_encode">编码格式</string>
    <string name="net_result">响应结果</string>
    
    <string name="xml_label">解析XML 网络获得数据源</string>
    <string name="xml_button">获得及解析</string>

</resources>
