<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0">
        <!--  android:background="@drawable/default_bg" -->

        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="62.0px"
            android:background="@drawable/login_back"
            android:paddingBottom="10.0px"
            android:paddingTop="21.0px" >

            <ImageView
                android:id="@+id/faceimg"
                android:contentDescription="@string/face_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_head" />

            <EditText
                android:id="@+id/login_edit_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0dip"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_toRightOf="@id/faceimg"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/account_hint"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="45.0sp" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/login_edit_account"
                android:layout_alignLeft="@id/login_edit_account"
                android:layout_alignTop="@id/login_edit_account"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/account_label"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <ImageButton
                android:id="@+id/imgbtn1"
                android:contentDescription="@string/list_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/login_edit_account"
                android:layout_alignRight="@id/login_edit_account"
                android:layout_alignTop="@id/login_edit_account"
                android:background="@drawable/more_select" />

            <EditText
                android:id="@+id/login_edit_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_edit_account"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_toRightOf="@id/faceimg"
                android:background="@drawable/qq_edit_login"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="45.0sp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_password"
                android:layout_alignLeft="@+id/login_edit_password"
                android:layout_alignTop="@+id/login_edit_password"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/password_label"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv2"
                android:layout_marginRight="12.0dip"
                android:layout_marginTop="7.0dip"
                android:text="@string/login"
                android:textSize="16.0sp" />

            <CheckBox
                android:id="@+id/login_cb_savepwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/loginbtn"
                android:button="@drawable/qq_btn_check"
                android:checked="true"
                android:paddingLeft="25.0px"
                android:text="@string/password_save"
                android:textColor="#ff222222"
                android:textSize="16.0sp" />
        </RelativeLayout>

        <TableLayout
            android:id="@+id/TableLayout03"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20.0px"
            android:layout_marginRight="20.0px"
            android:stretchColumns="1" >

            <TableRow>

                <CheckBox
                    android:id="@+id/login_cb_visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5.0px"
                    android:text="@string/check_option01"/>

                <CheckBox
                    android:id="@+id/login_cb_openvibra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5.0px"
                    android:text="@string/check_option02"/>
            </TableRow>

            <TableRow>

                <CheckBox
                    android:id="@+id/login_cb_receivegroupmsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5.0px"
                    android:text="@string/check_option03"/>

                <CheckBox
                    android:id="@+id/login_cb_quite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5.0px"
                    android:text="@string/check_option04"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
	<RelativeLayout android:id="@+id/RelativeLayout02"
		android:background="@drawable/bottom" android:layout_width="fill_parent"
		android:layout_height="44.0dip">
       	<ImageButton android:id="@+id/login_option"
       	    android:contentDescription="@string/othr_desc"
			android:background="@drawable/option" android:clickable="true"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip"
			android:layout_centerVertical="true" />
    </RelativeLayout>
</LinearLayout>